# ROS-1-Migration

./: .gitignore  README.md
Fast_ros_launch/: README.md  (+1 more)
Michelle_Wang_ws/localization_ros/loc_ws/src/lidar_localizer/: CMakeLists.txt
Michelle_Wang_ws/localization_ros/loc_ws/src/lidar_localizer/launch/: ndt_matching.launch  ndt_matching20240219save.launch  ndt_matching_dataset.launch  ndt_matching_dataset.launch.save  ndt_matching_zzl.launch
calib_ws/src/data_project/: CMakeLists.txt  README.md  package.xml
calib_ws/src/data_project/config/: carma_default.rviz  carma_tracking_lib.rviz
calib_ws/src/data_project/data/: header_bbx_score.txt
calib_ws/src/data_project/launch/: new_detection_1_debug.launch  new_detection_tracking_1_debug.launch  new_detection_tracking_2.launch
calib_ws/src/data_project/launch/new_tracking/: new_tracking1_pc.launch  new_tracking2_pc.launch
calib_ws/src/data_project/launch/old/: data_launch.launch  launch1_process_data.launch  launch2_process_data.launch  real_tracking2_data.launch  tracking1_data.launch  tracking1test_data.launch
calib_ws/src/data_project/rviz/: show_fusion_bbx.rviz  show_new.rviz  show_rs.rviz  show_tracking.rviz  show_tracking_both.rviz  show_tracking_new.rviz
calib_ws/src/multi_modalities_sensor_fusion/: CMakeLists.txt
calib_ws/src/multi_modalities_sensor_fusion/include/: cluster.h  cnn_segmentation.h
calib_ws/src/multi_modalities_sensor_fusion/launch/: launch2_muti_modalities_sensor_fusion.launch  muti_modalities_sensor_fusion.launch
calib_ws/src/multi_modalities_sensor_fusion/src/: cnn_segmentation.cpp  feature_generator.cpp  ground_segmentation.cpp
format_conversion_git_ws/src/bbx_sync/: CMakeLists.txt  README.md  package.xml
format_conversion_git_ws/src/bbx_sync/launch/: bbx_header_convert.launch  bbx_header_convert_v2.launch  two_bbx_sync_new.launch  two_header_bbx_sync_repub (copy).launch  veh_bbx_header_convert.launch
format_conversion_git_ws/src/bbx_sync/launch/old/: launch_bbx_header_new.launch
format_conversion_git_ws/src/bbx_sync/src/: bbx2headerbbx.cpp  bbx2headerbbx_v2.cpp  bbx_sync_new.cpp  two_bbx_sync_new.cpp  two_header_bbx_sync_repub.cpp
format_conversion_git_ws/src/bbx_sync/test/: bbx_sync_new (copy).cpp  bbx_sync_node.cpp  two_bbx_sync.cpp
format_conversion_git_ws/src/tf_publisher_DATA/: CMakeLists.txt  README.md  package.xml  sync_readme.md  tf_format.md
format_conversion_git_ws/src/tf_publisher_DATA/launch/: ego_veh_tf_publisher.launch  infra_conversion_all.launch  infra_conversion_all_bev.launch  infra_conversion_all_bev_se.launch  infra_conversion_all_old.launch  infra_conversion_all_pose.launch  infra_conversion_all_se.launch  infra_conversion_all_se_pose.launch  launch2_tf_publisher_simple.launch  launch_infra_tf_publisher.launch  launch_tf_publisher_infra.launch  launch_txt_tf_publisher.launch  launch_veh_tf_publisher.launch  se_infra_conversion_sync.launch  test_infra_conversion_all_se.launch  tf_publisher.launch  veh_conversion_all (copy).launch  veh_conversion_all.launch
format_conversion_git_ws/src/tf_publisher_DATA/launch/for_testing/: launch_tf_publisher1_test_static.launch  launch_tf_publisher_simple.launch  launch_tf_publisher_simple2.launch  launch_veh_static_tf_publisher.launch
format_conversion_git_ws/src/tf_publisher_DATA/rviz_cfg/: mapping_simple.rviz  mapping_trc.rviz
format_conversion_git_ws/src/tf_publisher_DATA/scripts/: infra_tf_publisher.py  txt_tf_publisher.py
format_conversion_git_ws/src/tf_publisher_DATA/src/: gps_fix_publisher.cpp  gps_fix_publisher_using_pc.cpp  gps_fix_publisher_using_pc2.cpp  tf_publisher.cpp  tf_publisher_example.cpp  tf_publisher_sim_using_mk.cpp  tf_publisher_sim_using_pc.cpp  veh_tf_publisher.cpp
lidar_camera_calibration/lidar_cam_ws/src/img_convert/: CMakeLists.txt  README.md  package.xml
lidar_camera_calibration/lidar_cam_ws/src/img_convert/launch/: launch_compress2image.launch  launch_compress2image_nw.launch
lidar_camera_calibration/lidar_cam_ws/src/img_convert/src/: compress2image.cpp  cv_bridge_method.cpp
lidar_camera_calibration/lidar_cam_ws/src/lidar_camera_calibrator/pcd_republisher/: CMakeLists.txt  package.xml
lidar_camera_calibration/lidar_cam_ws/src/lidar_camera_calibrator/pcd_republisher/launch/: calibration_publisher.launch
lidar_camera_calibration/lidar_cam_ws/src/lidar_camera_calibrator/pcd_republisher/src/: pcd_republisher.cpp
tracking_git_ws/src/multi_modalities_sensor_fusion/: README.md  package.xml
tracking_git_ws/src/multi_modalities_sensor_fusion/include/: feature_generator.h  ground_seg.h  lidar_cluster.h
tracking_git_ws/src/multi_modalities_sensor_fusion/launch/: launch1_muti_modalities_sensor_fusion.launch
tracking_git_ws/src/multi_modalities_sensor_fusion/src/: cluster.cpp  lidar_cluster.cpp  multi_modalities_sensor_fusion_node.cpp
tracking_git_ws/src/new_tracking_DATA/api_tracking_lib_autoware/: CMakeLists.txt  README.md  package.xml
tracking_git_ws/src/new_tracking_DATA/api_tracking_lib_autoware/launch/: lanch_api_tracking.launch
tracking_git_ws/src/new_tracking_DATA/api_tracking_lib_autoware/src/: api_tracking_lib_autoware.cpp  api_tracking_lib_autoware_sim.cpp
tracking_git_ws/src/new_tracking_DATA/tracking_lib_execute/: CMakeLists.txt  KF_tracking_code.md  package.xml
tracking_git_ws/src/new_tracking_DATA/tracking_lib_execute/config/: new_tracking2_TRC_pc.yaml  new_tracking_TRC_bbx.yaml  new_tracking_TRC_pc.yaml  new_tracking_TRC_v2v.yaml  tracking_TRC.yaml  tracking_TRC2.yaml
tracking_git_ws/src/new_tracking_DATA/tracking_lib_execute/config/kitti/: Segmenter_TRC.yaml  TrackingWorker_TRC2.yaml  TrackingWorker_TRC_bbx.yaml
tracking_git_ws/src/new_tracking_DATA/tracking_lib_execute/config/old/: tracking_bbx.yaml  tracking_test.yaml
tracking_git_ws/src/new_tracking_DATA/tracking_lib_execute/launch/: demo.launch  tracking_bbx.launch  tracking_lib.launch
tracking_git_ws/src/new_tracking_DATA/tracking_lib_execute/src/: detection_node_pc.cpp  tracking_node.cpp  tracking_node_bbx.cpp  tracking_node_bbx_2.cpp  tracking_node_pc.cpp  tracking_pc_node_new.cpp
(+522 files in other folders)
