<?xml version="1.0"?>
<package format="2">
  <name>data_project</name>
  <version>1.12.0</version>
  <description>Contains the launch files for Autoware's rosbag demo.</description>

  <maintainer email="autoware@todo.todo">autoware</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

 <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend> 

</package>
