<?xml version="1.0"?>
<package>
  <name>tf_publisher</name>
  <version>0.0.0</version>
  <description>The tf_publisher package</description>

  <maintainer email="x35xia@g.ucla.edu">Xin Xia</maintainer>
  <maintainer email="zhz03@g.ucla.edu">Zhaoliang Zheng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_header_msgs</build_depend>
  
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_header_msgs</run_depend>

  <build_depend>tf2 </build_depend>
  <run_depend>tf2 </run_depend>

</package>
