<?xml version="1.0"?>
<package format="2">
  <name>multi_modalities_sensor_fusion</name>
  <version>1.12.0</version>
  <description>muti_modalities_sensor_fusion</description>
  <maintainer email="x35xia@g.ucla.edu">Xin Xia</maintainer>
  <license>BSD</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>visualization_msgs</depend>

  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>vector_map_server</depend>

</package>
