<?xml version="1.0"?>
<package>
  <name>api_tracking_lib_autoware</name>
  <version>0.0.0</version>
  <description>The data_csv package</description>

  <maintainer email="x35xia@g.ucla.edu">Xin Xia</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>tf2 </build_depend>
  <run_depend>tf2 </run_depend>

  <build_depend>tf2_geometry_msgs </build_depend>
  <run_depend>tf2_geometry_msgs </run_depend>
  
  <build_depend>common_lib </build_depend>
  <run_depend>common_lib </run_depend>
  

</package>
