<?xml version="1.0"?>
<package>
  <name>tracking_lib_execute</name>
  <version>0.0.0</version>
  <description>The LiDAR tracking library, for tracking objects obtaining from segmentation-based detection and improve segmentation.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chenshj35@qq.com">Gary Chan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>common_lib</build_depend>
  <build_depend>roi_filters_lib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>segmenters_lib</build_depend>
  <build_depend>tracking_lib</build_depend>
  <build_depend>feature_extractors_lib</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>common_lib</run_depend>
  <run_depend>roi_filters_lib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>segmenters_lib</run_depend>
  <run_depend>tracking_lib</run_depend>
  <run_depend>feature_extractors_lib</run_depend>
  <run_depend>cmake_modules</run_depend>


  <buildtool_depend>catkin</buildtool_depend>


</package>
